# Module-1---C--

./: readme.md
learning/tiny_project/: CMakeLists.txt
learning/tiny_project/include/: example.hpp
learning/tiny_project/src/: main.cpp
module_app/: CMakeLists.txt
module_app/inputs/: input1.txt  input2.txt
module_app/outputs/: input2_report.txt
module_app/src/: main.cpp
module_app/src/adapters/: filesystem.cpp  filesystem.hpp
module_app/src/core/: analyzer.cpp  analyzer.hpp  analzyer.hpp  parser.cpp  parser.hpp  report.hpp
